[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ui/controls/patrons_controls.gd" type="Script" id=1]

[node name="PatronsControls" type="MarginContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -197.0
margin_right = 197.0
margin_bottom = 40.0
custom_constants/margin_top = 10
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 10.0
margin_right = 402.0
margin_bottom = 50.0

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.121569, 0.501961, 0.243137, 1 )

[node name="Label_Patrons" type="Label" parent="HBoxContainer/Control"]
margin_left = 35.0
margin_top = 13.0
margin_right = 115.0
margin_bottom = 27.0
size_flags_vertical = 6
text = "Patrons : %d"

[node name="Button_SpawnPatron" type="Button" parent="HBoxContainer"]
margin_left = 154.0
margin_right = 206.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
text = "Spawn"

[node name="SpinBox_PatronCount" type="SpinBox" parent="HBoxContainer"]
margin_left = 210.0
margin_right = 284.0
margin_bottom = 40.0
min_value = 1.0
max_value = 8.0
value = 1.0

[node name="Button_ClearPatrons" type="Button" parent="HBoxContainer"]
visible = false
margin_left = 530.0
margin_top = 10.0
margin_right = 573.0
margin_bottom = 66.0
focus_mode = 0
enabled_focus_mode = 0
text = "clear"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 288.0
margin_right = 402.0
margin_bottom = 40.0
custom_constants/margin_left = 10

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_right = 114.0
margin_bottom = 40.0
color = Color( 0.203922, 0.470588, 0.313726, 1 )

[node name="CheckBox_ShowStates" type="CheckBox" parent="HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_right = 114.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
text = "Show States"

[connection signal="pressed" from="HBoxContainer/Button_SpawnPatron" to="." method="_on_Button_SpawnPatron_pressed"]
[connection signal="toggled" from="HBoxContainer/MarginContainer/CheckBox_ShowStates" to="." method="_on_CheckBox_show_states_toggled"]
